deploy: 7f2fb6d6b3cee6d68882706bc1f6860874159f87

--- a/css/style.css
+++ b/css/style.css
@@ -1351,14 +1351,13 @@ input[type=number]::-webkit-inner-spin-button {
   mask: url("../img/sprite.svg#icon-hamburger") no-repeat center/100%;
 }
 
+.page-header__nav {
+  width: 90%;
+}
+
 .page-header__nav-list {
   justify-content: flex-end;
   margin: 0;
-}
-
-.page-header.no-js:hover .page-header__toggler,
-.page-header.no-js:focus-within .page-header__toggler {
-  display: none;
 }
 
 .socials {
@@ -1658,12 +1657,43 @@ input[type=number]::-webkit-inner-spin-button {
     order: initial;
   }
 
-  .firstscreen .no-js:hover + .firstscreen__promo,
-  .firstscreen .no-js:focus-within + .firstscreen__promo,
   .firstscreen .is-active + .firstscreen__promo {
     margin-top: 63px;
     opacity: 0;
   }
+
+  .firstscreen .no-js + .firstscreen__promo {
+    margin-right: -15px;
+    margin-left: -15px;
+    padding-right: 15px;
+    padding-left: 15px;
+    background-position: 50% 100%;
+    background-size: cover;
+  }
+
+@supports (background-image: var(--bg-webpMobile, none)) {
+    .firstscreen .no-js + .firstscreen__promo {
+      background-image: var(--bg-webpMobile, none);
+    }
+
+@media (max-width: 767px) and (-webkit-min-device-pixel-ratio: 1.5), (max-width: 767px) and (min-resolution: 144dpi), (max-width: 767px) and (min-resolution: 1.5dppx) {
+      .firstscreen .no-js + .firstscreen__promo {
+        background-image: var(--bg-webpMobile2x, none);
+      }
+}
+}
+
+@supports not (background-image: var(--bg-webpMobile, none)) {
+    .firstscreen .no-js + .firstscreen__promo {
+      background-image: var(--bg-default, none);
+    }
+
+@media (max-width: 767px) and (-webkit-min-device-pixel-ratio: 1.5), (max-width: 767px) and (min-resolution: 144dpi), (max-width: 767px) and (min-resolution: 1.5dppx) {
+      .firstscreen .no-js + .firstscreen__promo {
+        background-image: var(--bg-default2x, none);
+      }
+}
+}
 
   .firstscreen__promo {
     min-height: 437px;
@@ -1808,8 +1838,21 @@ input[type=number]::-webkit-inner-spin-button {
     margin-top: 32px;
   }
 
-  .page-header.no-js:hover,
-  .page-header.no-js:focus-within,
+  .page-header.no-js,
+  .page-header.is-active {
+    color: #011c40;
+    background-color: #f9fbfd;
+  }
+
+  .page-header.no-js .page-header__nav,
+  .page-header.is-active .page-header__nav {
+    display: block;
+  }
+
+  .page-header.no-js .page-header__toggler {
+    display: none;
+  }
+
   .page-header.is-active {
     position: fixed;
     top: 0;
@@ -1819,25 +1862,15 @@ input[type=number]::-webkit-inner-spin-button {
     align-items: flex-start;
     width: calc(100% - 35px);
     overflow-y: auto;
-    color: #011c40;
-    background-color: #f9fbfd;
     box-shadow: -35px 0 0 rgba(0, 43, 102, 0.5);
     transition: color 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
   }
 
-  .page-header.no-js:hover .page-header__toggler::before,
-  .page-header.no-js:focus-within .page-header__toggler::before,
   .page-header.is-active .page-header__toggler::before {
     width: 13px;
     margin-left: auto;
     -webkit-mask: url("../img/sprite.svg#icon-close") no-repeat center/100%;
     mask: url("../img/sprite.svg#icon-close") no-repeat center/100%;
-  }
-
-  .page-header.no-js:hover .page-header__nav,
-  .page-header.no-js:focus-within .page-header__nav,
-  .page-header.is-active .page-header__nav {
-    display: block;
   }
 }
 
