--- a/css/style.css
+++ b/css/style.css
@@ -708,7 +708,7 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .cards__btn {
-  margin-top: 15px;
+  margin-top: auto;
 }
 
 .cards__item:hover,
@@ -1442,10 +1442,6 @@ input[type=number]::-webkit-inner-spin-button {
     margin: auto 0 -7px;
   }
 
-  .cards__btn {
-    margin-top: 18px;
-  }
-
   .content {
     padding: 100px 0;
   }
@@ -1876,8 +1872,13 @@ input[type=number]::-webkit-inner-spin-button {
 
 @media (max-width: 599px) {
   .cards__items {
-    grid-template-columns: minmax(270px, 309px);
+    grid-template-columns: 1fr;
     padding: 0 10px;
+  }
+
+  .cards__item {
+    height: auto;
+    padding-top: 142.962962963%;
   }
 }
 
