--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -25,8 +25,9 @@
 
   input:not([type="checkbox"]) {
     width: 100%;
-    padding: 13px 16px 12px;
+    padding: 11px 16px;
     font-size: 14px;
+    line-height: 1.5;
     font-family: inherit;
     color: $color-tangaroa;
     background-color: $color-alice-blue;
