--- a/css/style.css
+++ b/css/style.css
@@ -942,9 +942,9 @@ input[type=number]::-webkit-inner-spin-button {
 
 .form__group input:not([type=checkbox]) {
   width: 100%;
-  padding: 13px 16px 12px;
+  padding: 11px 16px;
   font-size: 14px;
-  line-height: initial;
+  line-height: 1.5;
   font-family: inherit;
   color: #011c40;
   background-color: #f9fbfd;
