--- a/source/layouts/components/picture.twig
+++ b/source/layouts/components/picture.twig
@@ -2,7 +2,6 @@
 	<picture>
 		{% if webpMobile %}
 			<source
-				type="image/webp"
 				media="(max-width: 320px)"
 				srcset="{{ webpMobile }} 1x{{ webpMobile2x ? ', ' ~ webpMobile2x ~ ' 2x' }}"
 			/>
@@ -14,18 +13,11 @@
 				srcset="{{ webpTablet }} 1x{{ webpTablet2x ? ', ' ~ webpTablet2x ~ ' 2x' }}"
 			/>
 		{% endif %}
-		{% if webp %}
-			<source
-				type="image/webp"
-				{{ webpTablet or webpMobile ? 'media="(min-width: 1024px)"' }}
-				srcset="{{ webp }} 1x{{ webp2x ? ', ' ~ webp2x ~ ' 2x' }}"
-			/>
-		{% endif %}
 
 		<img
 			{{ className ? 'class="' ~ className ~ '"' }}
-			src="{{ default }}"
-			{{ default2x ? 'srcset="' ~ default2x ~ ' 2x"' }}
+			src="{{ webp }}"
+			{{ webp2x ? 'srcset="' ~ webp2x ~ ' 2x"' }}
 			alt="{{ alt }}"
 			{{ not alt ? 'aria-hidden="true"' }}
 			{{ not immediately ? 'loading="lazy"' }}
